--- a/SentimenMobilListik.ipynb
+++ b/SentimenMobilListik.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -9202,7 +9202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -9240,7 +9240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -9253,7 +9253,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9264,7 +9264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -9358,7 +9358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9376,7 +9376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9404,7 +9404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -10955,7 +10955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10966,7 +10966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -12511,7 +12511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12522,7 +12522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -14048,8 +14048,9 @@
        "Name: text, dtype: object"
       ]
      },
+     "execution_count": 81,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -14067,7 +14068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14085,7 +14086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14103,7 +14104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -27767,7 +27768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -29310,7 +29311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29329,7 +29330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29340,7 +29341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -29361,7 +29362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -29383,7 +29384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -29404,7 +29405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -29453,13 +29454,13 @@
     "print(\"SVM Recall:\", svm_recall)\n",
     "print(\"SVM F1-Score:\", svm_f1)\n",
     "\n",
-    "print(\"\\nAlgoritma SVM :\")\n",
+    "print(\"\\nAlgoritma Logistic Regression :\")\n",
     "print(\"Logistic Regression Accuracy:\", lr_accuracy)\n",
     "print(\"Logistic Regression Precision:\", lr_precision)\n",
     "print(\"Logistic Regression Recall:\", lr_recall)\n",
     "print(\"Logistic Regression F1-Score:\", lr_f1)\n",
     "\n",
-    "print(\"\\nAlgoritma SVM :\")\n",
+    "print(\"\\nAlgoritma Random Forest :\")\n",
     "print(\"Random Forest Accuracy:\", rf_accuracy)\n",
     "print(\"Random Forest Precision:\", rf_precision)\n",
     "print(\"Random Forest Recall:\", rf_recall)\n",
@@ -29468,7 +29469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
